Adds a random room creation system.

--- a/client/main.html
+++ b/client/main.html
@@ -1,4 +1,6 @@
 <head>
     <meta charset="UTF-8">
     <title>2D AR Studying</title>
+
+    <script type="text/javascript" src="http://cdn.icecomm.io/icecomm.js"></script>
 </head>
